feat: debug api

--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -46,6 +46,27 @@
         line-height: 22px;
         margin-bottom: 12px;
       }
+
+      .homepage-link-operation {
+        right: 0;
+        transform: translateX(30px);
+        transition: transform 0.5s ease-in-out;
+        box-shadow: -3px 0 4px -4px $color-text-sub;
+
+        &:hover {
+          display: inline-block;
+          transform: translateX(-30px);
+        }
+      }
+    }
+  }
+
+  .homepage-link-tooltip {
+    .ant-tooltip-content {
+      .ant-tooltip-inner {
+        background: $color-default !important;
+        color: $white !important;
+      }
     }
   }
 
@@ -62,38 +83,6 @@
       .rc-md-editor {
         background: $color-default-04;
         padding-bottom: 48px;
-      }
-    }
-  }
-}
-
-// 动画效果，会覆盖过来
-.option-item {
-  display: flex;
-  align-items: center;
-  margin-left: 0;
-  padding: 6px 10px;
-
-  &-delete {
-    background-color: $white;
-    right: 0;
-    transform: translateX(30px);
-    transition: transform 0.3s ease-in-out;
-    box-shadow: -3px 0 4px -4px $color-text-sub;
-  }
-
-  &.checked-item {
-    color: $primary;
-  }
-
-  &:hover {
-    color: $primary;
-    background-color: $color-click-bg;
-
-    .option-item-delete {
-      transform: translateX(0);
-      &-box {
-        background-color: $color-click-bg;
       }
     }
   }
