fix: fix menu styles

--- a/shell/app/layout/pages/page-container/components/sidebar/index.scss
+++ b/shell/app/layout/pages/page-container/components/sidebar/index.scss
@@ -124,6 +124,7 @@
         background-color: rgba($color-purple-highlight, 0.1);
         font-weight: 500;
         border-radius: 2px;
+        color: $color-purple-highlight;
         .ant-menu-item-icon {
           color: $color-purple-highlight;
         }
