--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -495,7 +495,7 @@ body {
   }
 
   .ant-avatar {
-    background: $color-primary;
+    background-color: $color-primary;
   }
 
   .ant-radio-group.ant-radio-group-solid {
