--- a/shell/app/config-page/components/dropdown-select/v2/dropdown-select.scss
+++ b/shell/app/config-page/components/dropdown-select/v2/dropdown-select.scss
@@ -1,5 +1,5 @@
 .cp-dropdown-select-menu {
-  background-color: rgba($color-default, 0.96);
+  background-color: $color-default;
   color: $white;
   .ant-dropdown-menu-item {
     cursor: default;
