--- a/shell/app/common/components/base-list/index.scss
+++ b/shell/app/common/components/base-list/index.scss
@@ -112,7 +112,7 @@
 .erda-list-operations {
   .ant-dropdown-menu {
     width: 200px;
-    background-color: rgba($color-default, 0.96);
+    background-color: $color-default;
   }
 
   .ant-dropdown-menu-item,
