--- a/shell/app/common/components/dropdown-select-new/index.scss
+++ b/shell/app/common/components/dropdown-select-new/index.scss
@@ -1,6 +1,6 @@
 .erda-dropdown-select-menu {
   &.ant-dropdown-menu {
-    background-color: rgba($color-default, 0.96);
+    background-color: $color-default;
     color: $white;
   }
   .ant-dropdown-menu-item {
