--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -4,7 +4,7 @@
   }
 }
 
-.homepage-link-tooltip {
+.homepage-tooltip {
   .ant-tooltip-content {
     .ant-tooltip-inner {
       background: $color-default !important;
