--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -44,7 +44,6 @@
 
   .homepage-header {
     height: 120px;
-    background: #3fa796;
     position: relative;
     margin-bottom: 56px;
 
@@ -55,7 +54,7 @@
       bottom: -38px;
       left: 16px;
       border: 6px white solid;
-      box-shadow: 0 2px 7px 0 rgba(48, 38, 71, 0.16);
+      box-shadow: 0 2px 7px 0 rgba($color-default, 0.16);
       border-radius: 2px;
     }
 
@@ -64,7 +63,7 @@
       bottom: -38px;
       left: 108px;
       font-size: 30px;
-      color: #302647;
+      color: $color-default;
       letter-spacing: 0;
       line-height: 38px;
     }
@@ -77,7 +76,7 @@
       .info-title {
         font-family: 'PingFangSC-Medium';
         font-size: 14px;
-        color: #302647;
+        color: $color-default;
         letter-spacing: 0;
         line-height: 22px;
         margin-bottom: 12px;
@@ -88,14 +87,10 @@
     padding: 0;
   }
 
-  .markdown-editor .markdown-editor-content .rc-md-editor .editor-container .sec-md .input {
-    // border: none;
-  }
-
   .rc-md-navigation .button-wrap .active-button:after {
     height: 3px;
     width: 28px;
-    background: #a051ff;
+    background: $color-purple-highlight;
     border-radius: 1.5px;
     left: 10px;
   }
