feat: update global nav background color

--- a/shell/app/layout/pages/page-container/components/navigation/index.scss
+++ b/shell/app/layout/pages/page-container/components/navigation/index.scss
@@ -1,7 +1,7 @@
 .erda-global-nav {
   height: 100%;
   width: 56px;
-  background: $white;
+  background: #fcfcfc;
   z-index: 10;
 
   .erda-global-logo {
