--- a/shell/app/modules/dcos/pages/cluster-dashboard/index.scss
+++ b/shell/app/modules/dcos/pages/cluster-dashboard/index.scss
@@ -32,6 +32,9 @@
 .machine-group-ct {
   display: grid;
   grid-gap: 20px 20px;
+  background-color: $white;
+  padding: 16px;
+  border-radius: 2px;
 
   &.sub-machine-group-ct {
     grid-gap: 8px 8px;
