--- a/shell/app/modules/project/common/components/project-selector.scss
+++ b/shell/app/modules/project/common/components/project-selector.scss
@@ -8,12 +8,9 @@
         box-shadow: unset;
       }
 
-      .values {
-        width: 100%;
-      }
-
+      .values,
       .value-item {
-        max-width: 100%;
+        width: 100%;
       }
     }
   }
@@ -21,5 +18,15 @@
   .head-project-name {
     display: flex;
     width: 100%;
+
+    .icon {
+      color: $color-text-icon;
+    }
+
+    &:hover {
+      .icon {
+        color: $color-default;
+      }
+    }
   }
 }
