--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -451,7 +451,7 @@ body {
   }
 
   .ant-table-tbody > tr > td {
-    color: $color-dark-6;
+    color: $color-default;
   }
 
   div.ant-progress-inner {
