--- a/shell/app/styles/util.scss
+++ b/shell/app/styles/util.scss
@@ -254,7 +254,7 @@
     margin: 0;
     margin-right: 40px;
     padding: 0;
-    color: $color-dark-6;
+    color: $color-default;
     line-height: 36px;
     text-align: center;
     border-bottom: 2px solid transparent;
@@ -269,7 +269,8 @@
     &.ant-menu-item-selected,
     &.ant-menu-item-active {
       color: $color-primary;
-      border-bottom: 2px solid $color-primary;
+      font-weight: 500;
+      border-bottom: 2px solid $color-purple-highlight;
     }
 
     &.tab-menu-disabled {
