--- a/shell/app/layout/pages/page-container/components/navigation/index.scss
+++ b/shell/app/layout/pages/page-container/components/navigation/index.scss
@@ -4,9 +4,26 @@
   background: #fcfcfc;
   z-index: 10;
 
-  .erda-global-logo {
-    font-size: 32px;
-    margin: 12px;
+  .logo-wrap {
+    .erda-global-logo {
+      transform: scale(1);
+      transition: all 0.1s ease-in;
+    }
+    .workbench-icon {
+      opacity: 0;
+      transform: scale(1.3);
+      transition: all 0.1s ease-in 0.05s;
+    }
+    &:hover {
+      .erda-global-logo {
+        transform: scale(1.3);
+        opacity: 0;
+      }
+      .workbench-icon {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
   }
 }
 
