fix: update avatar bg color

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -494,7 +494,7 @@ body {
   }
 
   .ant-avatar {
-    background-color: $color-primary;
+    background-color: rgb(89, 81, 108);
   }
 
   .ant-radio-group.ant-radio-group-solid {
