fix: fix tooltip inner link style

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -464,6 +464,9 @@ body {
       max-height: 90vh;
       max-width: 600px;
       overflow: auto;
+      a {
+        color: $color-purple-highlight;
+      }
     }
 
     .ant-tooltip-arrow {
