--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -3,6 +3,10 @@
   .main-scroll-tip {
     display: none;
   }
+
+  #main {
+    background-color: $white;
+  }
 }
 
 .homepage-link-delete-confirm {
