--- a/shell/app/layout/pages/page-container/components/sidebar/menu-head.scss
+++ b/shell/app/layout/pages/page-container/components/sidebar/menu-head.scss
@@ -6,13 +6,13 @@
     width: 36px;
     height: 36px;
     min-height: 36px;
-    border-radius: 100%;
+    border-radius: 2px;
   }
 
   .big-icon {
     width: 36px;
     height: 36px;
-    border-radius: 0;
+    border-radius: 2px;
   }
 
   svg:not(.i-icon svg, .erda-icon svg) {
