style: optimize modal style  in project home (#2465)
* style: optimize style in project home

* style: update style on modal

--- a/shell/app/common/components/form-modal/index.scss
+++ b/shell/app/common/components/form-modal/index.scss
@@ -20,11 +20,40 @@
     .ant-modal-header,
     .ant-modal-body,
     .ant-modal-footer {
-      background: rgba(48, 38, 71, 0.96);
+      background: rgba(48, 38, 71);
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+
+    .ant-modal-header {
+      height: 48px;
+      display: flex;
+      align-items: center;
+    }
+
+    .ant-modal-body {
+      padding-top: 0;
+      padding-bottom: 0;
+      min-height: 64px;
+    }
+
+    .ant-modal-footer {
+      height: 56px;
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
     }
 
     .ant-modal-title {
       color: $white;
+    }
+
+    .ant-form-item {
+      margin-bottom: 16px;
+
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
 
     .ant-form-item-label label {
@@ -42,7 +71,7 @@
     }
 
     .ant-input {
-      border: 0;
+      border-color: transparent;
       color: rgba($white, 0.6);
       background: rgba($white, 0.08);
 
@@ -63,9 +92,11 @@
       &:first-child {
         background: $color-white-2;
         border: 0;
+        margin-right: 8px;
       }
       &:last-child {
         background: $color-purple-deep;
+        margin-left: 0;
       }
     }
   }
