--- a/shell/app/styles/util.scss
+++ b/shell/app/styles/util.scss
@@ -176,7 +176,7 @@
   position: fixed;
   right: 0;
   bottom: 0;
-  left: $nav-width + $sidebar-width;
+  left: $nav-width + $b16 + 1;
   z-index: 8;
   padding: 8px 32px;
   text-align: right;
@@ -184,7 +184,7 @@
   border-top: 1px solid $color-border;
 
   &.fold {
-    left: $nav-width + $subsider-fold-width;
+    left: $nav-width + $sidebar-width + $b32 + 1;
   }
 
   @include md-width() {
