--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -33,6 +33,7 @@ $color-dark-06: rgba(0, 0, 0, 0.06) !default;
 $color-dark-04: rgba(0, 0, 0, 0.04) !default;
 $color-dark-02: rgba(0, 0, 0, 0.02) !default;
 
+$color-white-9: rgba(255, 255, 255, 0.9) !default;
 $color-white-8: rgba(255, 255, 255, 0.8) !default;
 $color-white-6: rgba(255, 255, 255, 0.6) !default;
 $color-white-4: rgba(255, 255, 255, 0.4) !default;
