style: update  a label color

--- a/shell/app/common/components/markdown-editor/editor.scss
+++ b/shell/app/common/components/markdown-editor/editor.scss
@@ -4,6 +4,10 @@
   line-height: 1.6;
   word-break: break-word;
 
+  a {
+    color: $color-purple-highlight;
+  }
+
   p {
     white-space: normal !important;
   }
