--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -345,6 +345,14 @@ body {
     min-height: auto;
   }
 
+  .ant-input-affix-wrapper {
+    border: none; // remove border in normal mode but show in focus mode
+
+    input {
+      background-color: transparent;
+    }
+  }
+
   .ant-input-group span.ant-input-affix-wrapper {
     display: inline-flex;
   }
