--- a/shell/app/common/components/table/index.scss
+++ b/shell/app/common/components/table/index.scss
@@ -18,6 +18,7 @@
 
   .erda-table-sorter-overlay {
     width: 160px;
+    min-width: 160px !important;
 
     .ant-dropdown-menu-title-content > span {
       color: $color-table-color;
