fix: revert input border for some condition

--- a/shell/app/styles/antd-extension.scss
+++ b/shell/app/styles/antd-extension.scss
@@ -346,7 +346,7 @@ body {
   }
 
   .ant-input-affix-wrapper {
-    border: none; // remove border in normal mode but show in focus mode
+    // border: none; // remove border in normal mode but show in focus mode
 
     input {
       background-color: transparent;
