--- a/shell/app/common/components/contractive-filter/index.scss
+++ b/shell/app/common/components/contractive-filter/index.scss
@@ -72,6 +72,12 @@
     }
   }
 
+  // TODO: remove after overwrite global input style
+  .ant-input-affix-wrapper {
+    border: none;
+    margin-left: 2px;
+  }
+
   .contractive-filter-item-close {
     position: absolute;
     top: -6px;
