--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -67,11 +67,18 @@
     }
   }
 
-  .markdown-edit-button {
-    right: 380px;
-    top: 228px;
-    box-shadow: 0 1px 4px 0 rgba(48, 38, 71, 0.16);
-    border-radius: 16px;
+  .read-only-markdown {
+    &:hover {
+      .markdown-edit-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        right: 380px;
+        top: 228px;
+        box-shadow: 0 1px 4px 0 rgba(48, 38, 71, 0.16);
+        border-radius: 16px;
+      }
+    }
   }
 
   .homepage-body {
