fix: set display none when not hover on markdonw

--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -68,6 +68,10 @@
   }
 
   .read-only-markdown {
+    .markdown-edit-button {
+      display: none;
+    }
+
     &:hover {
       .markdown-edit-button {
         display: flex;
