--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -70,17 +70,14 @@
   .read-only-markdown {
     .markdown-edit-button {
       display: none;
+      right: 380px;
+      top: 228px;
+      z-index: 2;
     }
 
     &:hover {
       .markdown-edit-button {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        right: 380px;
-        top: 228px;
-        box-shadow: 0 1px 4px 0 rgba(48, 38, 71, 0.16);
-        border-radius: 16px;
       }
     }
   }
