style: add edit button in markdown (#2525)
* style: add edit button in markdown

* refactor: use css to control the hover style on edit button

* fix: set display none when not hover on markdonw

* refactor: refactor code

--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -67,6 +67,21 @@
     }
   }
 
+  .read-only-markdown {
+    .markdown-edit-button {
+      display: none;
+      right: 380px;
+      top: 228px;
+      z-index: 2;
+    }
+
+    &:hover {
+      .markdown-edit-button {
+        display: flex;
+      }
+    }
+  }
+
   .homepage-body {
     .homepage-info {
       width: 280px;
