--- a/shell/app/config-page/components/card/card.scss
+++ b/shell/app/config-page/components/card/card.scss
@@ -27,7 +27,6 @@
 
   .cp-card-item {
     position: relative;
-    overflow: hidden;
     outline: 1px solid $color-border;
     &::after {
       content: '';
@@ -36,6 +35,7 @@
       left: 0;
       height: 3px;
       width: 100%;
+      border-radius: 0 0 3px 3px;
       background-color: $color-cyan-600;
     }
     &:hover {
