--- a/shell/app/layout/common/error-page.scss
+++ b/shell/app/layout/common/error-page.scss
@@ -29,3 +29,110 @@
     }
   }
 }
+
+.land-page {
+  position: relative;
+  background-color: #4ac1a5;
+  .content {
+    min-width: 730px;
+  }
+  .title {
+    height: 128px;
+    font-family: PingFangSC-Semibold;
+    font-size: 56px;
+    color: $white;
+    letter-spacing: 0;
+    line-height: 64px;
+    text-shadow: 0 1px 8px rgba(0, 0, 0, 0.1);
+  }
+  .bg-image {
+    width: 50%;
+    height: 100%;
+    position: absolute;
+    left: 50%;
+  }
+
+  .org-select {
+    position: relative;
+    width: 100%;
+    height: 64px;
+    min-height: 64px;
+    background: rgba(255, 255, 255, 0.9);
+  }
+
+  .tip {
+    margin-left: 16px;
+    pointer-events: none;
+    z-index: 2;
+    font-size: 16px;
+    transform-origin: top left;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
+  }
+
+  .input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    appearance: none;
+    background: none;
+    padding: 16px;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
+  }
+
+  .options {
+    position: absolute;
+    height: 220px;
+    width: 100%;
+    top: 66px;
+    left: 0;
+    padding: 8px;
+    background: rgba(255, 255, 255, 0.9);
+    box-shadow: 0 2px 8px 0 rgba(48, 38, 71, 0.16);
+    border-radius: 2px;
+    overflow: auto;
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
+    opacity: 0;
+    pointer-events: none;
+  }
+  .icon {
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.5, 1);
+    color: $color-text-icon;
+    z-index: 2;
+  }
+
+  .showOptions {
+    .options {
+      pointer-events: unset;
+      opacity: 1;
+    }
+    .tip {
+      transform: translateY(-14px) scale(0.75);
+    }
+    .icon {
+      transform: rotate(180deg);
+      color: $color-text;
+    }
+    .input {
+      transform: translateY(8px);
+    }
+  }
+
+  .org-name {
+    font-weight: 500;
+    line-height: 22px;
+  }
+
+  .org-sub-name {
+    line-height: 20px;
+  }
+
+  .option.active {
+    .org-name {
+      color: $color-purple-highlight;
+    }
+  }
+}
