fix: card border animation

--- a/shell/app/config-page/components/card/card.scss
+++ b/shell/app/config-page/components/card/card.scss
@@ -18,7 +18,7 @@
 
   @keyframes border {
     50% {
-      transform: scaleX(0);
+      transform: scaleX(0) translateY(-1px);
     }
     100% {
       transform: scaleX(1) translateY(-1px);
