--- a/shell/app/common/components/markdown-editor/editor.scss
+++ b/shell/app/common/components/markdown-editor/editor.scss
@@ -5,7 +5,8 @@
   word-break: break-word;
 
   a {
-    color: $color-purple-highlight;
+    color: #424CA6;
+    text-decoration: underline;
   }
 
   p {
@@ -41,7 +42,9 @@
   h4,
   h5,
   h6 {
+    font-family: 'Avenir-Heavy';
     position: relative;
+    color: $color-default;
     margin: 20px 0 10px;
     padding: 0;
     font-weight: bold;
@@ -96,17 +99,18 @@
   }
 
   h1 {
-    color: #000000;
-    font-size: 28px;
+    font-size: 24px;
+    line-height: 32px;
   }
 
   h2 {
-    color: #000000;
-    font-size: 24px;
+    font-size: 20px;
+    line-height: 28px;
   }
 
   h3 {
-    font-size: 18px;
+    font-size: 16px;
+    line-height: 24px;
   }
 
   h4 {
