--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -106,13 +106,14 @@
 
   .rc-md-editor {
     border: 0;
-    background: rgba($color-default, 0.04);
+    background: $white;
   }
 
   .rc-md-navigation {
     background: transparent;
     border-bottom: rgba($color-default, 0.08);
     box-shadow: 0 2px 1px 0 rgba($color-default, 0.08);
+    z-index: 9999;
   }
 
   .markdown-editor .markdown-editor-content .rc-md-editor .editor-container .sec-md .input {
@@ -138,7 +139,6 @@
   .markdown-editor-content {
     &.show-btn {
       .rc-md-editor {
-        background: $color-default-04;
         padding-bottom: 48px;
       }
     }
