refactor: refactor code

--- a/shell/app/modules/project/pages/homepage/index.scss
+++ b/shell/app/modules/project/pages/homepage/index.scss
@@ -98,6 +98,12 @@
       .info-brief {
         line-height: 22px;
       }
+
+      .homepage-link {
+        span {
+          color: #424CA6,
+        }
+      }
     }
   }
   .markdown-editor .markdown-editor-content .rc-md-editor .editor-container {
