feat: code optimization

--- a/shell/app/modules/project/pages/pipelines/index.scss
+++ b/shell/app/modules/project/pages/pipelines/index.scss
@@ -1,4 +1,8 @@
 .project-pipeline {
+  .application-item.active {
+    background: $color-purple-100;
+  }
+
   .app-list {
     border-right: 1px solid $color-default-1;
 
