fix: fix card style in deploy orders

--- a/shell/app/modules/project/pages/deploy/index.scss
+++ b/shell/app/modules/project/pages/deploy/index.scss
@@ -1,5 +1,9 @@
 .project-deploy-orders {
   .ant-spin-container {
     overflow: auto;
+    padding: 0 12px;
+  }
+  .ant-timeline-item .ant-timeline-item-content {
+    margin: 0 0 0 16px;
   }
 }
