fix: update user menu style

--- a/shell/app/layout/pages/page-container/components/navigation/user-menu.scss
+++ b/shell/app/layout/pages/page-container/components/navigation/user-menu.scss
@@ -3,6 +3,12 @@
     padding: 0;
   }
 
+  &.no-arrow {
+    .ant-popover-arrow-content {
+      background-color: unset;
+    }
+  }
+
   .user-avatar {
     box-shadow: 0 3px 11px 0 rgba(0, 0, 0, 0.15);
   }
