fix: hide card border in some condition

--- a/shell/app/config-page/components/card/card.scss
+++ b/shell/app/config-page/components/card/card.scss
@@ -29,21 +29,27 @@
 .cp-card-item {
   position: relative;
   outline: 1px solid $color-border;
-  &::after {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    left: 0;
-    height: 3px;
-    width: 100%;
-    border-radius: 0 0 3px 3px;
-    background-color: $color-cyan-600;
-  }
+
   &:hover {
     outline: none;
     box-shadow: 0 2px 8px 0 rgba($color-default, 0.16);
+  }
+
+  &.animate-border {
     &::after {
-      animation: border 0.3s ease-in-out forwards;
+      content: '';
+      position: absolute;
+      bottom: -1px;
+      left: 0;
+      height: 3px;
+      width: 100%;
+      border-radius: 0 0 3px 3px;
+      background-color: $color-cyan-600;
+    }
+    &:hover {
+      &::after {
+        animation: border 0.3s ease-in-out forwards;
+      }
     }
   }
 
