--- a/shell/app/modules/org/pages/projects/import-project-template.scss
+++ b/shell/app/modules/org/pages/projects/import-project-template.scss
@@ -2,28 +2,37 @@
   font-family: 'PingFangSC-Regular';
   line-height: 22px;
 
-  .ant-upload-list-item {
-    display: flex;
-    align-items: center;
-    margin-top: 0;
+  .ant-upload-list-text-container {
+    margin-top: -8px;
 
-    .ant-upload-list-item-info {
-      &:hover {
-        background-color: $color-default-01;
-      }
-    }
-    .ant-upload-text-icon {
+    .ant-upload-list-item {
       display: flex;
       align-items: center;
-    }
-    .ant-btn-text {
-      &:hover {
-        background-color: transparent;
-      }
-    }
+      margin-top: 0;
 
-    .ant-upload-list-item-card-actions-btn {
-      opacity: 1;
+      .ant-upload-list-item-info {
+        color: $color-default;
+
+        &:hover {
+          background-color: $color-default-01;
+        }
+        .ant-upload-list-item-name {
+          color: $color-default;
+        }
+      }
+      .ant-upload-text-icon {
+        display: flex;
+        align-items: center;
+      }
+      .ant-btn-text {
+        &:hover {
+          background-color: transparent;
+        }
+      }
+
+      .ant-upload-list-item-card-actions-btn {
+        opacity: 1;
+      }
     }
   }
 }
