--- a/shell/app/common/components/pagination/index.scss
+++ b/shell/app/common/components/pagination/index.scss
@@ -1,10 +1,13 @@
 .erda-pagination {
-  padding: 10px 0.5rem;
+  padding: 12px 0.5rem;
   line-height: 24px;
   color: $color-table-color;
 
-  .pagination-center {
-    line-height: 36px;
+  .pagination-center,
+  .pagination-pre,
+  .pagination-next {
+    height: 32px;
+    line-height: 32px;
   }
 
   .bg-hover:not(.disabled) {
