fix: fix project deploy styles

--- a/shell/app/common/components/simple-tabs/index.scss
+++ b/shell/app/common/components/simple-tabs/index.scss
@@ -6,8 +6,10 @@
     color: $color-default;
     &:hover,
     &.selected {
-      font-weight: bold;
-      border-bottom-color: $color-purple-highlight;
+      &:not(.not-allowed) {
+        font-weight: bold;
+        border-bottom-color: $color-purple-highlight;
+      }
     }
   }
   &.theme-dark {
