fix: remove sidebar border

--- a/shell/app/layout/pages/page-container/components/sidebar/index.scss
+++ b/shell/app/layout/pages/page-container/components/sidebar/index.scss
@@ -103,6 +103,7 @@
   user-select: none;
 
   .ant-menu {
+    border: none;
     background-color: transparent;
     .ant-menu-item-icon {
       color: $color-default-6;
