feat: replace $color-table-head-bg with $color-default-02

--- a/shell/app/common/components/table/index.scss
+++ b/shell/app/common/components/table/index.scss
@@ -73,7 +73,7 @@
 
   .erda-table-footer {
     padding: 0 1rem;
-    background-color: $color-table-head-bg;
+    background-color: $color-default-02;
   }
 
   .ant-table {
@@ -207,7 +207,7 @@
 .erda-table-filter {
   padding: 7px 1rem;
   line-height: 50px;
-  background-color: $color-table-head-bg;
+  background-color: $color-default-02;
 
   &-content {
     line-height: 1.2;
