fix: fix deploy add page

--- a/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
+++ b/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
@@ -1,5 +1,20 @@
 .project-deploy-add-release {
   height: 70vh;
+  .load-more-selector {
+    .results {
+      padding: 0;
+      border: 1px solid transparent;
+
+      &:hover {
+        box-shadow: unset;
+      }
+
+      .values,
+      .value-item {
+        width: 100%;
+      }
+    }
+  }
 }
 
 .project-add-release-app {
