--- a/shell/app/modules/org/common/card/index.scss
+++ b/shell/app/modules/org/common/card/index.scss
@@ -2,7 +2,7 @@
   .erda-card-header {
     line-height: 1;
     font-weight: bold;
-    background-color: $color-default-02;
+    background-color: $color-table-head-bg;
   }
 
   .erda-card-body {
