--- a/shell/app/styles/_color.scss
+++ b/shell/app/styles/_color.scss
@@ -157,6 +157,7 @@ $terminal-bgcolor: #48515f;
 $color-table-color: #837d90;
 $color-table-text-highlight: #7c53db;
 $color-table-bg-hover: #f7f7f8;
+$color-table-head-bg: #fbfbfb;
 $color-bg-gray: #efeef0;
 
 // color new list
