feat: overwrite personal workbench list footer bg color

--- a/shell/app/org-home/pages/personal-home.scss
+++ b/shell/app/org-home/pages/personal-home.scss
@@ -18,4 +18,8 @@
       background-attachment: local, local, scroll, scroll;
     }
   }
+
+  .pagination-wrap {
+    background-color: $white !important;
+  }
 }
