--- a/shell/app/common/components/radio-tabs/index.scss
+++ b/shell/app/common/components/radio-tabs/index.scss
@@ -2,7 +2,7 @@
   .ant-radio-button-wrapper {
     padding: 0 20px;
     line-height: 30px;
-    border: unset;
+    border: unset !important;
     color: $color-default;
     background-color: $color-default-06;
     box-shadow: unset !important;
