fix: fix app selector height

--- a/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
+++ b/shell/app/modules/project/pages/deploy/add-deploy/add-release.scss
@@ -4,6 +4,11 @@
     .results {
       padding: 0;
       border: 1px solid transparent;
+      min-height: 24px;
+      > div {
+        line-height: 24px !important;
+        height: 24px !important;
+      }
 
       &:hover {
         box-shadow: unset;
