fix: remove fille style in importing project

--- a/shell/app/modules/org/pages/projects/import-project-template.scss
+++ b/shell/app/modules/org/pages/projects/import-project-template.scss
@@ -2,6 +2,12 @@
   font-family: 'PingFangSC-Regular';
   line-height: 22px;
 
+  .init-upload {
+    .ant-upload-list-item-info {
+      display: none;
+    }
+  }
+
   .ant-upload-list-text-container {
     margin-top: -8px;
 
