--- a/shell/app/modules/org/pages/projects/settings/info/index.scss
+++ b/shell/app/modules/org/pages/projects/settings/info/index.scss
@@ -5,4 +5,8 @@
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 2;
   }
+
+  .org-with-logo {
+    width: calc(100% - 64px - 16px);
+  }
 }
