feat(dop): project pipeline apps list add pipelines total num

--- a/shell/app/modules/project/pages/pipelines/index.scss
+++ b/shell/app/modules/project/pages/pipelines/index.scss
@@ -1,9 +1,22 @@
 .project-pipeline {
+  box-shadow: 0 1px 4px 0 rgba($color-default, 0.16);
+
   .application-item {
     height: 40px;
 
     &.active {
-      background: $color-purple-100;
+      position: relative;
+      background: $white;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        width: 3px;
+        background-color: $color-purple-highlight;
+      }
     }
   }
 
